# trim

./: LICENSE  README.md  pyproject.toml
examples/: generate.py
trim/: __init__.py  config.py
trim/attention/: attention.py
trim/core/: block.py  kv_cache_manager.py  scheduler.py  schema.py
trim/engine/: core.py  llm.py
trim/model/: llama.py  model_loader.py
trim/sample/: sampler.py
trim/worker/: gpu_model_runner.py  gpu_worker.py
