[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trim"
version = "0.1.0"
description = "A simplified reimplementation of vLLM v1 for learning LLM inference"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.43.0",
    "flash-attn>=2.6.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["trim*"]

[tool.ruff]
line-length = 100
